...
    <string name="oligosaccharides">Oligosaccharides</string>
    <string name="disaccharides">Disaccharides</string>
    <string name="monosaccharides">Monosaccharides</string>
    <string name="polyols">Polyols</string>

    <!-- Actions -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
...
